[package]
name = "polymarket_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15"
url = "2"
chrono = "0.4"
